--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -5,9 +5,9 @@
       <img src="assets/images/logo.png" alt="">
   </div>
   <ul>
-      <a href=""><li class="selected"><span class="icon-cart"></span>Punto de ventas</li></a>
-      <a href="/products"><li><span class="icon-price-tags"></span>Productos</li></a>
-      <a href=""><li><span class="icon-user"></span>Clientes</li></a>
-      <a href=""><li><span class="icon-profile"></span>Ventas</li></a>
+      <a routerLink="/"><li class="selected"><span class="icon-cart"></span>Punto de ventas</li></a>
+      <a routerLink="/products"><li><span class="icon-price-tags"></span>Productos</li></a>
+      <a routerLink="/clients"><li><span class="icon-user"></span>Clientes</li></a>
+      <a routerLink="/sales"><li><span class="icon-profile"></span>Ventas</li></a>
   </ul>
 </div>
