--- a/src/app/sale/sale-index/sale-index.component.html
+++ b/src/app/sale/sale-index/sale-index.component.html
@@ -5,7 +5,7 @@
     </div>
     <nav class="activities-bar">
         <div class="zone-name">
-            <h2>Productos</h2>
+            <h2>Ventas</h2>
         </div>
         <ul class="user-options">
         <li>Alfonso Valencia</li>
@@ -17,29 +17,23 @@
   <div class="navigation-wrapper">
       <nav class="navigation">
           <ul>
-              <a routerLink="/products"><li class="selected"><span class="icon-profile"></span> Registros</li></a>
-              <a routerLink="/products/new"><li><span class="icon-plus"></span> Nuevo</li></a>
+              <a routerLink="/sales"><li class="selected"><span class="icon-profile"></span> Registros</li></a>
           </ul>
       </nav>
   </div>
   <div class="indexer-wrapper">
       <section class="indexer-area">
           <div class="indexer-title">
-              <h3><span class="icon-file-text"></span> Listando productos</h3>
+              <h3><span class="icon-file-text"></span> Listando ventas</h3>
           </div>
           <div class="indexer">
-              <div *ngFor="let product of products" class="record">
+              <div *ngFor="let sale of sales" class="record">
                   <div class="information">
-                      <p>Nombre: <span>{{product.name}}</span></p>
-                      <p>Precio: $<span>{{product.price.toFixed(2)}}</span></p>
-                      <p>Medida de venta: <span>{{product.measureType}}</span></p>
+                      <p>Fecha: <span>{{Formater.dateFormat(sale.timestamp)}}</span></p>
                   </div>
                   <div class="buttons">
                       <div class="button">
-                          <a routerLink="/products/{{product.id}}"><span class="icon-eye"></span> Ver</a>
-                      </div>
-                      <div class="button">
-                          <button (click)="deleteProduct(product.id)"><span class="icon-bin"></span> Eliminar</button>
+                          <a routerLink="/sales/{{product.id}}"><span class="icon-eye"></span> Ver</a>
                       </div>
                   </div>
               </div>
