ClientModule y sus componentes construidos y funcionando

--- a/src/app/client/client-new/client-new.component.html
+++ b/src/app/client/client-new/client-new.component.html
@@ -1,3 +1,60 @@
-<p>
-  client-new works!
-</p>
+<header>
+  <div class="title">
+    <span class="icon-hipster"></span>
+    <h1>Moustache seller</h1>
+  </div>
+  <nav class="activities-bar">
+    <div class="zone-name">
+      <h2>Clientes</h2>
+    </div>
+    <ul class="user-options">
+      <li>Alfonso Valencia</li>
+      <li class="toggle-options" (click)="this.toggle()"><span class="icon-menu"></span></li>
+    </ul>
+  </nav>
+</header>
+<div class="content-area">
+  <div class="navigation-wrapper">
+    <nav class="navigation">
+      <ul>
+        <a routerLink="/clients"><li><span class="icon-profile"></span> Registros</li></a>
+        <a routerLink="/clients/new"><li class="selected"><span class="icon-user-plus"></span> Nuevo</li></a>
+      </ul>
+    </nav>
+  </div>
+  <div class="form-wrapper">
+    <section class="form-area">
+      <div class="form-title">
+        <h3><span class="icon-file-text"></span> Información de nuevo cliente</h3>
+      </div>
+      <div class="form" *ngIf="client">
+        <div class="field text-field">
+          <label>Nombre</label>
+          <input [(ngModel)]="client.name">
+        </div>
+        <div class="field number-field">
+          <label>Apellidos</label>
+          <input [(ngModel)]="client.lastName">
+        </div>
+        <div class="field select-field">
+          <label>Género</label>
+          <select [(ngModel)]="client.gender">
+            <option value="0">Masculino</option>
+            <option value="1">Femenino</option>
+          </select>
+        </div>
+        <div class="field number-field">
+          <label>Fecha de nacimiento</label>
+          <input [(ngModel)]="client.stringBirthdate" type="date">
+        </div>
+        <div class="field number-field">
+          <label>Correo electrónico</label>
+          <input [(ngModel)]="client.email" type="email">
+        </div>
+        <div class="submit">
+          <input (click)="this.saveClient()" type="button" value="Guardar">
+        </div>
+      </div>
+    </section>
+  </div>
+</div>
