--- a/src/app/client/client-index/client-index.component.html
+++ b/src/app/client/client-index/client-index.component.html
@@ -1,3 +1,49 @@
-<p>
-  client-index works!
-</p>
+<header>
+  <div class="title">
+    <span class="icon-hipster"></span>
+    <h1>Moustache seller</h1>
+  </div>
+  <nav class="activities-bar">
+    <div class="zone-name">
+      <h2>Clientes</h2>
+    </div>
+    <ul class="user-options">
+      <li>Alfonso Valencia</li>
+      <li class="toggle-options" (click)="this.toggle()"><span class="icon-menu"></span></li>
+    </ul>
+  </nav>
+</header>
+<div class="content-area">
+  <div class="navigation-wrapper">
+    <nav class="navigation">
+      <ul>
+        <a routerLink="/clients"><li class="selected"><span class="icon-profile"></span> Registros</li></a>
+        <a routerLink="/clients/new"><li><span class="icon-user-plus"></span> Nuevo</li></a>
+      </ul>
+    </nav>
+  </div>
+  <div class="indexer-wrapper">
+    <section class="indexer-area">
+      <div class="indexer-title">
+        <h3><span class="icon-file-text"></span> Listando clientes</h3>
+      </div>
+      <div class="indexer">
+        <div *ngFor="let client of clients" class="record">
+          <div class="information">
+            <p>Nombre: <span>{{client.name}}</span></p>
+            <p>Apellidos: <span>{{client.lastName}}</span></p>
+            <p>Edad: <span>{{client.age}}</span></p>
+          </div>
+          <div class="buttons">
+            <div class="button">
+              <a routerLink="/clients/{{client.id}}"><span class="icon-eye"></span> Ver</a>
+            </div>
+            <div class="button">
+              <button (click)="deleteClient(client.id)"><span class="icon-bin"></span> Eliminar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+</div>
