--- a/src/app/point-sales/point-sales.component.css
+++ b/src/app/point-sales/point-sales.component.css
@@ -9,6 +9,22 @@ html, body {
   height: 100%;
 }
 
+/* Tooltip text */
+.tooltip .tooltiptext {
+  visibility: hidden;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+
 /* * * * Point of sale * * * * */
 
 .point-sales {
@@ -36,6 +52,24 @@ html, body {
 
 .sale {
   color: #666666;
+}
+
+.current-sale .empty {
+  width: 60%;
+  height: 80%;
+  margin: 20% auto 0 auto;
+}
+
+.current-sale .empty span {
+  display: block;
+  text-align: center;
+  color: #666666;
+  font-size: 22px;
+}
+
+.current-sale .empty .icon {
+  font-size: 86px;
+  margin-bottom: 10px;
 }
 
 /* Product */
@@ -156,6 +190,15 @@ html, body {
   font-size: 22px;
 }
 
+.keys tbody .special:hover {
+  background-color: #171e2b;
+}
+
+.keys .selected {
+  background-color: #171e2b;
+  color: white;
+}
+
 #pay {
   width: 150px;
   font-size: 22px;
@@ -253,9 +296,9 @@ html, body {
   -moz-transition: background-color 0.2s ease;
   -o-transition: background-color 0.2s ease;
   -webkit-transition: background-color 0.2s ease;
-  padding: 0;
   display: inline-block;
   padding: 10px;
+  max-width: 160px;
   background-color: white;
   border-radius: 6px;
   cursor: pointer;
@@ -271,6 +314,8 @@ html, body {
 .products-menu .product .img {
   width: 150px;
   height: 100px;
+  margin-right: auto;
+  margin-left: auto;
   background-color: #f1f1f1;
   text-align: center;
   line-height: 110px;
