--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -5,9 +5,16 @@
       <img src="assets/images/logo.png" alt="">
   </div>
   <ul>
-      <a routerLink="/"><li class="selected"><span class="icon-cart"></span>Punto de ventas</li></a>
-      <a routerLink="/products"><li><span class="icon-price-tags"></span>Productos</li></a>
-      <a routerLink="/clients"><li><span class="icon-user"></span>Clientes</li></a>
-      <a routerLink="/sales"><li><span class="icon-profile"></span>Ventas</li></a>
+      <a routerLink="/"><li [class.selected]="sidebar.zone === 0">
+        <span class="icon-cart"></span>Punto de ventas
+      </li></a>
+      <a routerLink="/products"><li [class.selected]="sidebar.zone === 1">
+        <span class="icon-price-tags"></span>Productos</li></a>
+      <a routerLink="/clients"><li [class.selected]="sidebar.zone === 2">
+        <span class="icon-user"></span>Clientes
+      </li></a>
+      <a routerLink="/sales"><li [class.selected]="sidebar.zone === 3">
+        <span class="icon-profile"></span>Ventas
+      </li></a>
   </ul>
 </div>
