--- a/src/styles.css
+++ b/src/styles.css
@@ -22,13 +22,19 @@ html {
 
 app-root, app-point-sales, app-product-index, app-product-new,
 app-product-show, app-product-edit, app-sale-index, app-sale-show,
-app-client-index, app-client-show, app-client-new, app-client-eidt {
+app-client-index, app-client-show, app-client-new, app-client-eidt,
+app-client-assigner {
   display: flex;
   flex-flow: column;
   flex: 1 1 auto;
   background-color: #171e2b;
 }
 
+app-client-assigner {
+  position: fixed;
+  display: flex;
+  flex-flow: column;
+}
 a {
   text-decoration: none;
   color: black;
