--- a/src/app/client/client-index/client-index.component.html
+++ b/src/app/client/client-index/client-index.component.html
@@ -32,7 +32,7 @@
           <div class="information">
             <p>Nombre: <span>{{client.name}}</span></p>
             <p>Apellidos: <span>{{client.lastName}}</span></p>
-            <p>Edad: <span>{{client.age}}</span></p>
+            <p>Edad: <span>{{client.getAge()}}</span></p>
           </div>
           <div class="buttons">
             <div class="button">
