--- a/src/app/product/product-edit/product-edit.component.html
+++ b/src/app/product/product-edit/product-edit.component.html
@@ -19,7 +19,7 @@
       <ul>
         <a routerLink="/products"><li><span class="icon-profile"></span> Registros</li></a>
         <a routerLink="/products/new"><li><span class="icon-plus"></span> Nuevo</li></a>
-        <li class="selected"><span class="icon-user"></span> Producto pdt-<span class="id">{{product.id}}</span></li>
+        <li class="selected"><span class="icon-file-text"></span> Producto pdt-<span class="id">{{product.id}}</span></li>
       </ul>
     </nav>
   </div>
@@ -46,9 +46,10 @@
         </div>
         <div class="field select-field">
           <label>Medida para venta</label>
-          <select [(ngModel)]="product.measureType">
-            <option value="0">Unidad</option>
-            <option value="1">Granel</option>
+          <select [(ngModel)]="product.measurement">
+            <option value="unitario">Unitario</option>
+            <option value="peso">Peso</option>
+            <option value="volumen">Volumen</option>
           </select>
         </div>
         <div class="submit">
