--- a/src/app/product/product-index/product-index.component.html
+++ b/src/app/product/product-index/product-index.component.html
@@ -32,7 +32,7 @@
           <div class="information">
             <p>Nombre: <span>{{product.name}}</span></p>
             <p>Precio: $<span>{{product.price.toFixed(2)}}</span></p>
-            <p>Medida de venta: <span>{{product.measureType}}</span></p>
+            <p>Medida de venta: <span>{{product.measurement}}</span></p>
           </div>
           <div class="buttons">
             <div class="button">
