--- a/src/app/client/client-assigner/client-assigner.component.css
+++ b/src/app/client/client-assigner/client-assigner.component.css
@@ -33,7 +33,7 @@
     font-size: 18px;
 }
 
-.indexer .record {
+.record {
     display: flex;
     padding: 10px;
     color: #666666;
@@ -44,7 +44,7 @@
     margin: auto 0 auto 0;
 }
 
-.information h4, .indexer .record .information p {
+.information h4, .information p {
     margin: 0;
     padding: 0;
     font-weight: normal;
