--- a/src/app/client/client-new/client-new.component.html
+++ b/src/app/client/client-new/client-new.component.html
@@ -39,13 +39,13 @@
         <div class="field select-field">
           <label>Género</label>
           <select [(ngModel)]="client.gender">
-            <option value="0">Masculino</option>
-            <option value="1">Femenino</option>
+            <option value="masculino">Masculino</option>
+            <option value="femenino">Femenino</option>
           </select>
         </div>
-        <div class="field number-field">
+        <div class="field">
           <label>Fecha de nacimiento</label>
-          <input [(ngModel)]="client.stringBirthdate" type="date">
+          <input [(ngModel)]="stringBirthdate" type="date">
         </div>
         <div class="field number-field">
           <label>Correo electrónico</label>
