--- a/src/app/point-sales/point-sales.component.html
+++ b/src/app/point-sales/point-sales.component.html
@@ -25,14 +25,16 @@
     </ul>
     <ul class="user-options">
       <li>Alfonso Valencia</li>
-      <li class="toggle-options" (click)="this.toggle()"><span class="icon-menu"></span></li>
+      <li class="toggle-options" (click)="this.toggle()">
+        <span class="icon-menu"></span>
+      </li>
     </ul>
   </nav>
 </header>
 <div class="point-sales" fxFlexFill fxLayout="column">
   <div class="sale-keyboard-wrapper">
     <section class="current-sale">
-      <div class="empty" *ngIf="selectedSaleProducts.length < 1">
+      <div class="empty" *ngIf="selectedSale.productsSale.length < 1">
         <p>
           <span class="icon icon-cart"></span>
           <span>Agregue los productos!</span>
@@ -41,46 +43,44 @@
       <div class="sale">
         <div class="added-products">
           <div
-          *ngFor="let product of selectedSaleProducts"
-          [class.selected]="product === selectedProduct"
-          (click)="selectProduct(product.id)"
+          *ngFor="let productSale of selectedSale.productsSale"
+          [class.selected]="productSale === selectedProductSale"
+          (click)="selectProductSale(productSale.id)"
           class="product">
             <h2 class="tooltip">
-              {{maxLength(product.name, 34)}}
-              <span *ngIf="product.name.length > 35" class="tooltiptext">
-                {{product.name}}
+              {{maxLength(productSale.product.name, 34)}}
+              <span *ngIf="productSale.product.name.length > 35" class="tooltiptext">
+                {{productSale.product.name}}
               </span>
             </h2>
             <p>
               $<span class="prduct-total">{{
-                    (selectedSale.productsQuantity[
-                      selectedSale.products_id.indexOf(product.id)
-                    ] * product.price).toFixed(2)
+                    productSale.getTotal().toFixed(2)
                 }}</span>
             </p>
             <ul class="characteristics">
               <li>
                 <span class="quantity">{{
-                    selectedSale.productsQuantity[
-                      selectedSale.products_id.indexOf(product.id)
-                    ]
+                    productSale.productQuantity
                   }}</span>
                 <span class="unit">(u)</span>
               </li>
               <li>
-                a $<span class="price">{{product.price.toFixed(2)}}</span>
+                a $<span class="price">{{
+                  productSale.product.price.toFixed(2)
+                }}</span>
                 <span class="per-unit">c/u</span>
               </li>
             </ul>
           </div>
         </div>
-        <div *ngIf="selectedSaleProducts.length > 0" class="totals">
+        <div *ngIf="selectedSale.productsSale.length > 0" class="totals">
           <ul>
             <li class="total">Total: $<span id="sale-total">{{
-                selectedSalePayment.total.toFixed(2)
+                selectedSale.payment.getTotal().toFixed(2)
             }}</span></li>
             <li>IVA: $<span id="taxes">{{
-              selectedSalePayment.taxes.toFixed(2)
+              selectedSale.payment.getTaxes().toFixed(2)
             }}</span></li>
           </ul>
         </div>
@@ -91,9 +91,18 @@
         <table class="keys">
           <tbody>
             <tr>
-              <td colspan="3" class="corner-1 sale-client"
+              <td class="tooltip" colspan="3" class="corner-1 sale-client"
               (click)="toggleClients()">
-                <span class="icon-user"></span>Cliente
+                <span class="icon-user"></span>
+                <span *ngIf="exports.client === undefined">Cliente</span>
+                <span *ngIf="exports.client">{{
+                  maxLength(exports.client.name, 12)
+                }}</span>
+                <span
+                *ngIf="exports.client !== undefined && exports.client.name.length > 12"
+                class="tooltiptext">
+                  {{exports.client.name}}
+                </span>
               </td>
               <td class="num-key" (click)="changeQuantity('1')">1</td>
               <td class="num-key" (click)="changeQuantity('2')">2</td>
@@ -142,7 +151,7 @@
       </div>
       <div class="products">
         <div *ngFor="let product of products" class="product"
-        (click)="addProductToSale(product.id)">
+        (click)="addProductToSale(product)">
           <!-- img src="images/image-1.jpg" alt="" !-->
           <div class="img">
             <span class="icon-images"></span>
@@ -160,5 +169,8 @@
       </div>
   </section>
 </div>
-<app-client-assigner [sale]="selectedSale" *ngIf="toggles.clients">
+<app-client-assigner
+[sale]="selectedSale"
+[imports]="exports"
+*ngIf="toggles.clients">
 </app-client-assigner>
