--- a/src/app/product/product-show/product-show.component.html
+++ b/src/app/product/product-show/product-show.component.html
@@ -19,7 +19,7 @@
       <ul>
         <a routerLink="/products"><li><span class="icon-profile"></span> Registros</li></a>
         <a routerLink="/products/new"><li><span class="icon-plus"></span> Nuevo</li></a>
-        <li class="selected"><span class="icon-user"></span> Producto pdt-<span class="id">{{product.id}}</span></li>
+        <li class="selected"><span class="icon-file-text"></span> Producto pdt-<span class="id">{{product.id}}</span></li>
       </ul>
     </nav>
   </div>
@@ -49,7 +49,7 @@
         </div>
         <div class="field">
           <label>Medida para venta</label>
-          <p><span>{{product.measureType}}</span></p>
+          <p><span>{{product.measurement}}</span></p>
         </div>
       </div>
     </section>
